--- a/style.css
+++ b/style.css
@@ -39,10 +39,15 @@
 body
 {
     font-family: 'Helvetica';
-    font-size: 12px;
+    font-size: 16px;
 
     background-color: rgb(36, 36, 36);
     color: #ffc644;
+}
+
+p
+{
+    color: white;
 }
 
 h1, h2
@@ -213,6 +218,7 @@ h6
     width: 300px;
     height: 300px;
     padding: 20px;
+    position: relative;
 }
 
 .gallery line div img
@@ -220,6 +226,41 @@ h6
     width: inherit;
     height: inherit;
     object-fit:cover;
+}
+
+.gallery line div div
+{
+    position: absolute;
+    display: inline-block;
+
+    right: 20px;
+    top: 20px;
+    left: 20px;
+    bottom: 20px;
+
+    box-sizing: border-box;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    background: linear-gradient(to bottom, rgba(36, 36, 36, 0.7) 0%, rgba(36, 36, 36, 0.7) 100%);
+    background-position: 0 -2%;
+    background-repeat: repeat-x;
+    background-size: 100% 0%;
+    opacity: 0;
+    transition: background-size 0.5s, opacity 0.5s;
+
+    cursor: pointer;
+    user-select: none;
+}
+
+.gallery line div div:hover
+{
+    background-size: 100% 100%;
+    opacity: 1;
+    transition: background-size 0.3s, opacity 0.3s;
 }
 
 .gallery line div h3
