--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ body
 
 p
 {
-    color: white;
+    color: rgb(239, 239, 239);
+    line-height: 1.75;
 }
 
 h1, h2
@@ -62,7 +63,8 @@ h1, h2
 
 h2
 {
-    font-size: 40px;
+    font-size: 70px;
+    padding-top: 40px;
 }
 
 h3
@@ -70,6 +72,15 @@ h3
     font-family: 'Helvetica';
     font-size: 18px;
     font-weight: bold;
+}
+
+h5
+{
+    font-family: 'Helvetica';
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: -18px;
 }
 
 h6
@@ -81,6 +92,22 @@ h6
     letter-spacing: 2;
     margin-top: 25px;
     margin-bottom: 25px;
+}
+
+a
+{
+    color: inherit;
+    text-decoration: none;
+}
+
+header
+{
+    margin-bottom: 90px;
+}
+
+footer
+{
+    display: flex;
 }
 
 .center
@@ -169,10 +196,12 @@ h6
 {
     display: grid;
     grid-template-columns: 0.8fr 1.4fr 0.8fr;
-    height: 90px;
+    height: 95px;
     position: sticky;
     top: 0px;
     background-color:rgb(36, 36, 36);
+    /* background: linear-gradient(to bottom, rgba(36, 36, 36, 1) 60%, rgba(36, 36, 36, 0) 100%); */
+    z-index: 10;
 }
 
 .mainNav ul
@@ -211,20 +240,26 @@ h6
     align-content: center;
     display: flex;
     justify-content: center;
+
+    /* width: 70%;
+    margin-left: 15%; */
 }
 
 .gallery line div
 {
-    width: 300px;
-    height: 300px;
-    padding: 20px;
+    width: 340;
+    flex-shrink: 3;
+    padding: 0px;
+    margin: 20px;
+    margin-bottom: 40px;
     position: relative;
 }
 
 .gallery line div img
 {
-    width: inherit;
-    height: inherit;
+    width: 340;
+    height: 340;
+    top: 100%;
     object-fit:cover;
 }
 
@@ -234,9 +269,10 @@ h6
     display: inline-block;
 
     right: 20px;
-    top: 20px;
-    left: 20px;
+    top: -20px;
+    left: -20px;
     bottom: 20px;
+    height: 340px;
 
     box-sizing: border-box;
 
@@ -263,10 +299,21 @@ h6
     transition: background-size 0.3s, opacity 0.3s;
 }
 
+.gallery line div div p
+{
+    padding: 20px;
+}
+
 .gallery line div h3
 {
     text-align: center;
     margin-top: 6px;
+}
+
+.content
+{
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 #alignLeft
@@ -276,17 +323,82 @@ h6
     /* background-color: rgba(89, 43, 255, 0.575); */
 }
 
-#alignCenter
+.alignCenter
 {
     text-align: center;
     /* background-color: rgba(255, 225, 0, 0.575); */
 }
 
-#alignRight
+.alignRight
 {
     text-align: right;
     margin-right: 18px;
     /* background-color: rgba(89, 43, 255, 0.575); */
+}
+
+.ytContainer
+{
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+
+.ytContainer iframe
+{    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    border: 2px solid;
+}
+
+.imgHeader
+{
+    width: 100%;
+    margin: 0;
+    height: 600px;
+    margin-bottom: 50px;
+}
+
+.imgHeader bkg
+{
+    display: block;
+    width: 100%;
+    height: inherit;
+    /* background-image: url("img/FISHGUNCover.jpg"); */
+    background-attachment: fixed;
+    background-repeat:no-repeat;
+    background-size: cover;
+}
+
+.headerSection
+{
+    position: absolute;
+    display: inline-block;
+
+    right: 0px;
+    top: 140px;
+    left: 0px;
+    bottom: 0px;
+    height: inherit;
+
+    box-sizing: border-box;
+
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.imgHeader h1
+{
+    color:rgb(36, 36, 36);
+}
+
+.imgHeader h6
+{
+    color:rgb(36, 36, 36);
 }
 
 #topSpace
