--- a/style.css
+++ b/style.css
@@ -232,38 +232,31 @@ footer
 {
     margin: auto;
     align-content: center;
-    width: 100%;
-}
+    width: min(1400px, 100%);
 
-.gallery line
-{
-    align-content: center;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-
-    /* width: 70%;
-    margin-left: 15%; */
 }
 
-.gallery line div
+.gallery div
 {
-    width: 340;
-    flex-shrink: 3;
+    width: max(20vw, 340px);
+    height: max(20vw, 340px);
     padding: 0px;
     margin: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     position: relative;
 }
 
-.gallery line div img
+.gallery div img
 {
-    width: 340;
-    height: 340;
-    top: 100%;
+    width: 100%;
+    height:100%;
     object-fit:cover;
 }
 
-.gallery line div div
+.gallery div div
 {
     position: absolute;
     display: inline-block;
@@ -272,7 +265,8 @@ footer
     top: -20px;
     left: -20px;
     bottom: 20px;
-    height: 340px;
+    width: 100%;
+    height: 100%;
 
     box-sizing: border-box;
 
@@ -292,19 +286,19 @@ footer
     user-select: none;
 }
 
-.gallery line div div:hover
+.gallery div div:hover
 {
     background-size: 100% 100%;
     opacity: 1;
     transition: background-size 0.3s, opacity 0.3s;
 }
 
-.gallery line div div p
+.gallery div div p
 {
     padding: 20px;
 }
 
-.gallery line div h3
+.gallery div h3
 {
     text-align: center;
     margin-top: 6px;
