--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 body
 {
     font-family: 'Helvetica';
-    font-size: 16px;
+    font-size: 1em;
 
     background-color: rgb(36, 36, 36);
     color: #ffc644;
@@ -54,7 +54,7 @@ p
 h1, h2
 {
     font-family: 'Qua';
-    font-size: 100px;
+    font-size: 6.5em;
     font-weight: normal;
     line-height: 95%;
     margin-top: 25px;
@@ -63,7 +63,7 @@ h1, h2
 
 h2
 {
-    font-size: 70px;
+    font-size: 4.5em;
     padding-top: 40px;
 }
 
@@ -77,7 +77,7 @@ h3
 h5
 {
     font-family: 'Helvetica';
-    font-size: 14px;
+    font-size: 0.84em;
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: -18px;
@@ -86,7 +86,7 @@ h5
 h6
 {
     font-family: 'Helvetica';
-    font-size: 18px;
+    font-size: 1.2em;
     font-weight: normal;
     text-transform: uppercase;
     letter-spacing: 2;
