--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ footer
     color:rgb(36, 36, 36);
 }
 
-@media screen and (max-width: 767px)
+@media screen and (max-width: 767px) or (orientation: vertical)
 {
     .imgHeader
     {
