--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 body
 {
     font-family: 'Helvetica';
-    font-size: 1em;
+    font-size: 1rem;
 
     background-color: rgb(36, 36, 36);
     color: #ffc644;
@@ -398,7 +398,7 @@ footer
     color:rgb(36, 36, 36);
 }
 
-@media screen and (max-width: 767px) or (orientation: vertical)
+@media screen and (max-width: 767px)
 {
     .imgHeader
     {
@@ -431,4 +431,9 @@ footer
 #subHeading
 {
     margin-top: -8px;
+}
+
+#toggleMenu
+{
+    display: none;
 }
