--- a/style.css
+++ b/style.css
@@ -36,6 +36,16 @@
     src: url("HelveticaNowText-BoldItalic.ttf");
 }
 
+.material-symbols-outlined
+{
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48;
+    font-size: 90px;
+}
+
 body
 {
     font-family: 'Helvetica';
@@ -71,7 +81,7 @@ h2
 h3
 {
     font-family: 'Helvetica';
-    font-size: 18px;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
@@ -130,7 +140,7 @@ footer
     border-width: 2px;
     border-style: solid;
     border-color: white;
-    padding: 20px;
+    padding: 12px 15px;
 
     /* outline: 2px solid rgba(255, 199, 68, 0);
     outline-offset: -2px;
@@ -227,6 +237,47 @@ footer
     margin-left: 4px;
     margin-right: 4px;
     /* padding: 24px; */
+}
+
+.hamMenu
+{
+    display: none;
+    position: sticky;
+    text-align: right;
+    padding-right: 6px;
+    padding-top: 6px;
+    top: 0px;
+    z-index: 10;
+    background-color: rgb(36, 36, 36);
+
+    max-width: 200px;
+    padding: 6px 15px;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.hamMenu h3
+{
+    position: sticky;
+    display: block;
+
+    
+    /* text-align: center; */
+    text-transform: uppercase;
+    color: rgb(239, 239, 239);
+}
+
+@media screen and (max-width: 1480px)
+{
+    .nav
+    {
+        display: none;
+    }
+
+    .hamMenu
+    {
+        display: block;
+    }
 }
 
 .gallery
@@ -402,17 +453,17 @@ footer
     color:rgb(36, 36, 36);
 }
 
-@media screen and (max-width: 767px)
+@media screen and ((max-width: 767px) or (orientation: portrait))
 {
     .imgHeader
     {
-        height: 30vw;
+        height: 45vw;
     }
 
     .imgHeader bkg
     {
         background-size: contain;
-        height: 30vw;
+        height: 45vw;
     }
 
     .imgHeader h1
@@ -423,7 +474,7 @@ footer
 
     .imgHeader h6
     {
-        font-size: min(1.2em, 3vw);
+        font-size: min(1.2em, 2vw);
     }
 }
 
