--- a/style.css
+++ b/style.css
@@ -250,8 +250,8 @@ footer
     z-index: 10;
     background-color: rgb(36, 36, 36);
 
-    max-width: 200px;
-    padding: 6px 15px;
+    /* max-width: 200px; */
+    padding: 6px 6px;
     margin-left: auto;
     margin-right: 0;
 }
@@ -260,16 +260,10 @@ footer
 {
     position: sticky;
     display: block;
-
     
     /* text-align: center; */
     text-transform: uppercase;
     color: rgb(239, 239, 239);
-}
-
-#hamMenu
-{
-
 }
 
 @media screen and (max-width: 1480px)
@@ -473,7 +467,7 @@ footer
 
     .imgHeader h1
     {
-        font-size: 1vw;
+        font-size: 12px;
         margin-bottom: 8px;
     }
 
