--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ footer
 
     /* max-width: 200px; */
     padding: 6px 6px;
-    margin-left: auto;
+    margin-left: 80vw;
     margin-right: 0;
 }
 
