--- a/style.css
+++ b/style.css
@@ -469,6 +469,11 @@ footer
     color:rgb(36, 36, 36);
 }
 
+.itchWidget
+{
+    width: min(552px, 80%);
+}
+
 @media screen and ((max-width: 767px) or (orientation: portrait))
 {
     .imgHeader
@@ -492,11 +497,11 @@ footer
     {
         font-size: min(1.2em, 2vw);
     }
-}
 
-.itchWidget
-{
-    width: min(552px, 80%);
+    .itchWidget
+    {
+        width: 80%;
+    }
 }
 
 #topSpace
