--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ footer
     display: flex;
 }
 
-@media screen and (max-width: 700px)
+@media screen and ((max-width: 700px) or (orientarion: portrait))
 {
     h1
     {
