--- a/style.css
+++ b/style.css
@@ -486,12 +486,34 @@ footer
 
 .simpleGallery img
 {
-    width: min(600px, 100%);
+    width: min(300px, 100%);
     height: auto;
     padding: 0px;
     margin: 10px;
     margin-bottom: 10px;
     position: relative;
+}
+
+.simpleGallery div
+{
+    width: min(900px, 100vw);
+    height: min(504px, 56vw);
+    padding: 0px;
+    margin: 10px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.smallNav
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.smallNav h3
+{
+    margin: 2px 20px;
 }
 
 @media screen and ((max-width: 767px) or (orientation: portrait))
@@ -525,8 +547,7 @@ footer
 
     h1
     {
-        font-size: 10px;
-        color: red;
+        font-size: 20vw;
     }
 }
 
