--- a/style.css
+++ b/style.css
@@ -547,7 +547,12 @@ footer
 
     h1
     {
-        font-size: 20px;
+        font-size: 60px;
+    }
+
+    h2
+    {
+        font-size: 30px;
     }
 }
 
