--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ footer
     color: rgb(239, 239, 239);
 }
 
-@media screen and (max-width: 1480px)
+@media screen and (max-width: 1560px)
 {
     .nav
     {
@@ -516,6 +516,24 @@ footer
     margin: 2px 20px;
 }
 
+.audio
+{
+    width: min(1200px, 90%);
+}
+
+.audio audio
+{
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-bottom: 40px;
+}
+
+.audio audio h5
+{
+    width: 100%;
+    height: 100px;
+}
+
 @media screen and ((max-width: 767px) or (orientation: portrait))
 {
     .imgHeader
@@ -552,7 +570,12 @@ footer
 
     h2
     {
-        font-size: 30px;
+        font-size: 40px;
+    }
+
+    h6
+    {
+        font-size: 20px;
     }
 }
 
