--- a/style.css
+++ b/style.css
@@ -99,8 +99,9 @@ h6
     font-family: 'Helvetica';
     font-size: 1.2em;
     font-weight: normal;
-    text-transform: uppercase;
-    letter-spacing: 2;
+    /* text-transform: uppercase; */
+    /* letter-spacing: 2; */
+    letter-spacing: 1.5;
     margin-top: 25px;
     margin-bottom: 25px;
 }
